# openscope_upload

./: .gitignore  NP1_base_rig.json  README.md  __init__.py  dispatch_ephys_packaging.py  experiment_info.json  harp_utils.py  process_ephys_session.py  process_slap2.py  projects_info.csv  pyproject.toml  setup.py
co_dispatch/: dispatch_kilosort.py
data/: device.yml  openscope_rig.json  projects_info.csv  rigDescription.generated.json
openscope_upload/: batch_upload.py  co_survey.py  generate_rig_json.py  harp_utils.py  process_ephys_session.py  process_slap2.py
openscope_upload/co_dispatch/: dispatch_capsule.py  dispatch_ephys_packaging.py  dispatch_kilosort.py  dispatch_monitor_ephys.py  dispatch_ophys_pipeline.py  dispatch_psycode_packaging.py  dispatch_v2_packaging_ephys.py  dispatch_v2_packaging_ophys.py  dispatch_vismo_packaging.py
test_scripts/: test_build.py  test_mapper.py
utils/: naming_functions.py  pickle_functions.py  process_ephys_sync.py  project_constants.py  stimulus_functions.py  stimulus_sync_functions.py  sync_functions.py
